<resources>
    <string name="app_name">FairRandom</string>
    <string name="playersInputHint">4</string>
    <string name="playersNumberPrompt">How many players?</string>
    <string name="courtNumberPrompt">How many courts?</string>
    <string name="courtInputHint">1</string>
    <string name="submit">Submit</string>
    <string name="error">Error:</string>
    <string name="errorPlayerNumber">Number of players not entered.</string>
    <string name="errorCourtNumber">Number of courts not entered.</string>
    <string name="finish">Finish</string>
    <string name="generate">Generate</string>
    <string name="cancel">Cancel</string>
    <string name="court">Court:</string>
    <string name="empty">Empty</string>
    <string name="errorPlayerNumberLow">Number of players required to be above 4.</string>
    <string name="errorCourtNumberLow">Number of courts required to be above 0.</string>
    <string name="Start">Start</string>
    <string name="newPlayer">Add Player</string>
    <string name="newPlayerName">Player Name</string>
    <string name="errorPlayerNameEmpty">Please enter a player name.</string>
    <string name="setup">Setup</string>
    <string name="courts">Courts</string>
    <string name="Home">Home</string>
    <string name="errorPlayerNumberLowForCourt">The number of players is too low for the number of courts.</string>
    <string name="errorPlayerOnCourt">This player is currently on a court</string>
    <string name="PlayerNotFoundError">Player not found for this timeslot</string>
    <string name="PlayerAlreadyOnList">This player is already in the rotation.</string>
    <string name="Search">Search</string>
    <string name="StartTime">Start Time:</string>
    <string name="EndTime">End Time:</string>
    <string name="Players">Players:</string>
    <string name="NoPlayersFound">There were no players found for this timeslot.</string>
    <string name="NoTimeslotsFoundNearNow">There are no timeslots starting around this time.</string>
    <string name="NoTimeslotsSelected">No timeslot was selected.</string>
    <string name="Logo">Logo</string>
</resources>