<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupActivity"
    android:background="?attr/background"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newPlayerLayout"
        android:background="@drawable/grey_light_rect"
        android:padding="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newPlayerEditText"
            style="@style/inputBox"
            android:hint="@string/newPlayerName"
            android:inputType="textPersonName"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newPlayerButton"
            android:layout_below="@+id/newPlayerEditText"
            android:text="@string/newPlayer"
            style="@style/inputBox"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ListLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@id/errorTextView"
        android:layout_below="@+id/newPlayerLayout"
        android:background="@color/white">

        <ListView
            android:id="@+id/playersList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/topOfInputBow"
        android:layout_alignTop="@id/courtInputBox"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/courtInputBox"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/submitButton"
        android:background="@drawable/grey_light_rect">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/courtNumberTextView"
            style="@style/inputBox"
            android:text="@string/courtNumberPrompt"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/courtNumberEditText"
            android:inputType="number"
            android:layout_below="@id/courtNumberTextView"
            android:layout_alignStart="@id/courtNumberTextView"
            android:layout_alignEnd="@id/courtNumberTextView"
            style="@style/inputBox"
            android:hint="@string/courtInputHint"/>

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submitButton"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        style="@style/inputBox"
        android:text="@string/submit"/>

    <TextView
        android:id="@+id/errorTextView"
        style="@style/errorMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/courtInputBox"
        android:layout_centerHorizontal="true"/>



</RelativeLayout>